2004-03-05    Ping Cheng <pingc@wacom.com>
	* Modified tcl and tk configuration options
	* Updated webpage for kernel 2.6 support

2004-03-02    Ping Cheng <pingc@wacom.com>
	* Support 2.6.2/3 (Ned Konz)
	* Released version 0.6.1

2004-02-24    Ping Cheng <pingc@wacom.com>
	* Support module versioning for kernel 2.4.22 and later (Adrian Secord)
	* Added "Mode Toggle" to button functions to switch mode

2004-02-05    Ping Cheng <pingc@wacom.com>
	* Work around for 2.4.24 support (Marek Olszewski)

2004-02-04    Ping Cheng <pingc@wacom.com>
	* Released version 0.6.0

2004-01-19    Ping Cheng <pingc@wacom.com>
	* Sync wacom.c in kernel 2.6 with wacom.c in kernel 2.4 (Ned Konz)
	* Work around for 2.4.23 support (Jens Georg)

2004-01-13    Ping Cheng <pingc@wacom.com>
	* Fixed relative wheel bug in wacom.c for 2.6
	* Modified tcl and tk configuration options
	* Rearranged wacomcpl windows for Tablet PC
	* Updated README

2003-12-15    Ping Cheng <pingc@wacom.com>
	* Fixed a wacom.c bug for 2.6 (Martin Renold)
	* Added evdev.c to src/2.6 to attach replugged device
	* Updated README

2003-12-10    Ping Cheng <pingc@wacom.com>
	* Support kernel 2.6.0

2003-11-26    Ping Cheng <pingc@wacom.com>
        * Support Tablet PC Buttons. Default is off.
          Usage:
                xsetwacom set $device tpcbutton 1  (to turn it on)
                xsetwacom set $device tpcbutton 0  (to turn it off)
        * Turned configure option "--disable-wacom" as default
	* Added wacom_drv.o into the install script so wacom_drv.o
                will be installed along with the other executables  
		and libs when "make install" is issued.
                This enables the systems "identical" to the development 
		system to install the Wacom X driver related items 
		without rebuilding them on the targeted system.
		Where "identical" means both systems have the same version
                of XFree86, tcl, and tk. 
          Usage: